Image tiles: align portrait images with top of box to avoid chopping off heads

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -136,7 +136,7 @@ body {
         flex-basis: 300px;
         height: 300px;
         background-size: cover;
-        background-position: center center;
+        background-position: top center;
         background-color: #ccc;
         margin: 1rem;
         color: transparent;
